ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: appointment-payment-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /appointment
            backend:
              serviceName: appointment-service
              servicePort: 5678
          - path: /payment
            backend:
              serviceName: payment-service
              servicePort: 5678
